--- a/res/values-es-rXA/strings.xml
+++ b/res/values-es-rXA/strings.xml
@@ -370,4 +370,8 @@
   <string name="changelog_title">Registru de cambeos</string>
   <string name="welcome_title">Bienllegáu</string>
   <string name="welcome_msg">Bienllegáu al esplorador de ficheros de CyanogenMod.\n\nEsta aplicación dexa esplorar el sistema de ficheros y con ello, facer aiciones que puen llegar a bloquiar el preséu. Pa evitalo, l\'aplicación va aniciase en mou seguru.\n\nVas poder acceder al mou avanzáu de superusuariu per aciu del menú Axustes, pero va ser baxo la to responsabilidá l\'evitar qu\'una operación frañe\'l preséu.\n\nL\'equipu de CyanogenMod.\n</string>
+  <!-- ads -->
+  <string name="ads_title">Recomendar</string>        
+  <string name="ads_name">Más</string>        
+  <string name="ads_des">Usted quiere que todos aquí!</string>    
 </resources>
