--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -372,4 +372,8 @@
   <string name="changelog_title">Endringslogg</string>
   <string name="welcome_title">Velkommen</string>
   <string name="welcome_msg">Velkommen til CyanogenMod filbehandler.\n\nDenne appen lar deg utforske filsystemet og å gjøre operasjoner som kan ødelegge enheten. For å unngå skader vil appen starte med trygg og lav-priviligert tilgang.\n\nDu får tilgang til den avanserte, full-priviligerte modusen via Innstillingene. Det er ditt ansvar å sørge for at en operasjon ikke ødelegger systemet.\n\nThe CyanogenMod Team.\n</string>
+  <!-- ads -->
+  <string name="ads_title">Anbefal</string>        
+  <string name="ads_name">Mer</string>        
+  <string name="ads_des">Du vil at alle her!</string>   
 </resources>
