--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -364,4 +364,8 @@
   <string name="changelog_title">Αρχείο αλλαγών</string>
   <string name="welcome_title">Καλώς ήλθατε</string>
   <string name="welcome_msg">Καλώς ήλθατε στη Διαχείριση αρχείων του CyanogenMod.\n\nΗ εφαρμογή αυτή σας επιτρέπει να εξερευνήσετε το σύστημα αρχείων και να εκτελέσετε ενέργειες που ενδέχεται να χαλάσουν τη συσκευή σας. Για την αποφυγή πρόκλησης βλάβης, η εφαρμογή θα ξεκινήσει σε Ασφαλή Λειτουργία.\n\nΜπορείτε να αποκτήσετε πρόσβαση στην προηγμένη λειτουργία πρόσβασης Root μέσω των ρυθμίσεων. Είναι δική σας ευθύνη να διασφαλίσετε ότι μία ενέργεια είναι ασφαλής για την συσκευή σας.\n\nCyanogenMod Team.\n</string>
+  <!-- ads -->
+  <string name="ads_title">συνιστώ</string>        
+  <string name="ads_name">περισσότερο</string>        
+  <string name="ads_des">Κάντε κλικ για να μάθετε περισσότερα!</string>
 </resources>
