--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -322,4 +322,8 @@
   <string name="changelog_title">Ändringslogg</string>
   <string name="welcome_title">Välkommen</string>
   <string name="welcome_msg">Välkommen till CyanogenMods filhanterare.\n\nDenna app låter dig utforska filsystemet och genomföra åtgärder som kan skada din enhet. För att motverka skada startar appen i ett säkert läge utan rättigheter.\n\nDu kan komma åt det avancerade läget med fulla rättigheter i Inställningar. Det är ditt ansvar att försäkra dig om att en åtgärd inte skadar din enhet.\n\nThe CyanogenMod Team.\n</string>
+  <!-- ads -->
+  <string name="ads_title">Rekommenderat</string>        
+  <string name="ads_name">Mer</string>        
+  <string name="ads_des">Du vill att alla här!</string>  
 </resources>
