--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="select">Select</string>
     <string name="copy">Copy</string>
     <string name="move">Move</string>
+    <string name="add">Add</string>
+    <string name="dismiss">Dismiss</string>
 
     <!-- The root directory name -->
     <string name="root_directory_name"><![CDATA[<Root folder>]]></string>
