Add support for showing and moving files with CMFM [1/2]
Change-Id: I6851acf05a279a1b83bd041a4d90c8238892765d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -933,4 +933,10 @@
     <string name="docs">Docs</string>
     <string name="apps">Apps</string>
     <string name="archives">Archives</string>
+
+    <!-- Moving file notifications -->
+    <string name="moving_file_notification_title">Moving file</string>
+    <string name="move_complete_notification_title">Move complete</string>
+    <string name="move_complete_notification_description">Open location</string>
+    <string name="move_complete_notification_share_link">Share link</string>
 </resources>
