--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -756,4 +756,11 @@
   <string name="welcome_msg">Welcome to the CyanogenMod file manager.\n\nThis app allows you to explore the file system and do operations that could break your device. To prevent damage, the app will start in a safe, low-privileged mode.\n\nYou can access the advanced, full-privileged mode via Settings. It\'s your responsibility to ensure that an operation doesn\'t break your system.\n\nThe CyanogenMod Team</string>
   <string name="activity_not_found_exception">Couldn\'t find an app to open this file</string>
   <string name="snackbar_settings">Settings</string>
+
+<!--Adding missing button labels to improve the accessibility-->
+<!--Label for button id [ab_close] in file [navigation_view_customtitle_configuration]-->
+  <string name="ab_close">Close viewer options</string>
+<!--Label for button id [ab_configuration] in file [navigation_view_customtitle_breadcrumb]-->
+  <string name="ab_configuration">Viewer options</string>
+
 </resources>
